{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 26,
  "lineage": "c5fa78b4-f180-c475-259f-eda44d9b13f2",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "web_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/zones/europe-west1-b/instanceGroups/web-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-11-24T03:41:17.952-08:00",
            "enable_cdn": false,
            "fingerprint": "Z0aPasWDlFM=",
            "generated_id": 8492697261347306162,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/global/healthChecks/web-health-check"
            ],
            "id": "projects/terraform-vmp-lab/global/backendServices/web-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-backend-service",
            "port_name": "http",
            "project": "terraform-vmp-lab",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/global/backendServices/web-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_health_check.web_health_check",
            "google_compute_instance.web_servers",
            "google_compute_instance_group.web_instances",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.vpc_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-24T03:27:31.649-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-vmp-lab/global/firewalls/terraform-allow-external",
            "log_config": [],
            "name": "terraform-allow-external",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/global/networks/terraform-vpc",
            "priority": 1000,
            "project": "terraform-vmp-lab",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/global/firewalls/terraform-allow-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-11-24T03:27:31.444-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-vmp-lab/global/firewalls/terraform-allow-internal",
            "log_config": [],
            "name": "terraform-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/global/networks/terraform-vpc",
            "priority": 1000,
            "project": "terraform-vmp-lab",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/global/firewalls/terraform-allow-internal",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "web_forwarding",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/terraform-vmp-lab/global/forwardingRules/web-forwarding-rule",
            "ip_address": "34.36.5.50",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-forwarding-rule",
            "port_range": "80-80",
            "project": "terraform-vmp-lab",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/global/forwardingRules/web-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/global/targetHttpProxies/web-http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.web_backend",
            "google_compute_health_check.web_health_check",
            "google_compute_instance.web_servers",
            "google_compute_instance_group.web_instances",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.vpc_subnet",
            "google_compute_target_http_proxy.web_proxy",
            "google_compute_url_map.web_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251111",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/zones/europe-west1-b/disks/web-server-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-vmp-lab/zones/europe-west1-b/instances/web-server-1",
            "instance_id": "5213640132016077845",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "0vovoHpzr1M=",
            "metadata_startup_script": "#!/bin/bash\r\napt-get update\r\napt-get install -y nginx\r\necho \"\u003ch1\u003eHello from Web Server $((0 + 1))\u003c/h1\u003e\" \u003e /var/www/html/index.html\r\nsystemctl enable nginx\r\nsystemctl start nginx\r\n",
            "name": "web-server-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.78.229.159",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/global/networks/terraform-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/regions/europe-west1/subnetworks/terraform-subnet",
                "subnetwork_project": "terraform-vmp-lab"
              }
            ],
            "project": "terraform-vmp-lab",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/zones/europe-west1-b/instances/web-server-1",
            "service_account": [
              {
                "email": "505610803404-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server"
            ],
            "tags_fingerprint": "FYLDgkTKlA4=",
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.vpc_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251111",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/zones/europe-west1-b/disks/web-server-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-vmp-lab/zones/europe-west1-b/instances/web-server-2",
            "instance_id": "425300558221016085",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "XxMcbhdOGGQ=",
            "metadata_startup_script": "#!/bin/bash\r\napt-get update\r\napt-get install -y nginx\r\necho \"\u003ch1\u003eHello from Web Server $((1 + 1))\u003c/h1\u003e\" \u003e /var/www/html/index.html\r\nsystemctl enable nginx\r\nsystemctl start nginx\r\n",
            "name": "web-server-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.195.43.105",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/global/networks/terraform-vpc",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/regions/europe-west1/subnetworks/terraform-subnet",
                "subnetwork_project": "terraform-vmp-lab"
              }
            ],
            "project": "terraform-vmp-lab",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/zones/europe-west1-b/instances/web-server-2",
            "service_account": [
              {
                "email": "505610803404-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server"
            ],
            "tags_fingerprint": "FYLDgkTKlA4=",
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.vpc_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-vmp-lab/global/networks/terraform-vpc",
            "mtu": 0,
            "name": "terraform-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "terraform-vmp-lab",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/global/networks/terraform-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-24T03:27:34.291-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/terraform-vmp-lab/regions/europe-west1/subnetworks/terraform-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "terraform-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/global/networks/terraform-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-vmp-lab",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/regions/europe-west1/subnetworks/terraform-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "web_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-24T03:42:22.634-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/terraform-vmp-lab/global/targetHttpProxies/web-http-proxy",
            "name": "web-http-proxy",
            "project": "terraform-vmp-lab",
            "proxy_bind": false,
            "proxy_id": 2933001747536935537,
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/global/targetHttpProxies/web-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/global/urlMaps/web-url-map"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.web_backend",
            "google_compute_health_check.web_health_check",
            "google_compute_instance.web_servers",
            "google_compute_instance_group.web_instances",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.vpc_subnet",
            "google_compute_url_map.web_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "web_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-24T03:42:10.983-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/global/backendServices/web-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "2fOOpXjPYWo=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/terraform-vmp-lab/global/urlMaps/web-url-map",
            "map_id": 1847052651524127357,
            "name": "web-url-map",
            "path_matcher": [],
            "project": "terraform-vmp-lab",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-vmp-lab/global/urlMaps/web-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.web_backend",
            "google_compute_health_check.web_health_check",
            "google_compute_instance.web_servers",
            "google_compute_instance_group.web_instances",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.vpc_subnet"
          ]
        }
      ]
    }
  ]
}